--- a/data/files.html
+++ b/data/files.html
@@ -9,24 +9,10 @@
     <div class="container">
         <div class="sidebar">
             <ul>
-                <li>
-                    <a href="/index.html">
-                        <span class="icon"><i class="fas fa-home"></i></span>
-                        <span class="item">Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/files.html" class="active">
-                        <span class="icon"><i class="fas fa-folder-tree"></i></span>
-                        <span class="item">Files</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/minup.html">
-                        <span class="icon"><i class="fas fa-file-arrow-up"></i></span>
-                        <span class="item">Upload (basic)</span>
-                    </a>
-                </li>
+                <li><a href="/index.html"><span class="icon"><i class="fas fa-home"></i></span><span class="item">Home</span></a></li>
+                <li><a href="#" class="active"><span class="icon"><i class="fas fa-folder-tree"></i></span><span class="item">Files</span></a></li>
+                <li><a href="/update.html"><span class="icon"><i class="fas fa-upload"></i></span><span class="item">OTA Update</span></a></li>
+                <li><a href="/minup.html"><span class="icon"><i class="fas fa-file-arrow-up"></i></span><span class="item">Upload (basic)</span></a></li>
             </ul>
         </div>
 
@@ -41,7 +27,6 @@
     </div>
 
     <script>
-        // load and display all files after page loading has finished
         window.addEventListener("load", function () {
             fetch('/$fs')
                 .then(function (result) { return result.json(); })
@@ -50,25 +35,24 @@
                     e.forEach(function (f) {
                         var entry = document.createElement("div");
                         var nameObj = document.createElement("a");
+                        var timeObj = document.createElement("span");
+                        var delObj = document.createElement("span");
+
                         nameObj.href = '/' + f.name;
                         nameObj.innerText = '/' + f.name;
                         entry.appendChild(nameObj)
-
                         entry.appendChild(document.createTextNode(' (' + f.size + ') '));
 
-                        var timeObj = document.createElement("span");
                         timeObj.innerText = (new Date(f.time * 1000)).toLocaleString();
                         entry.appendChild(timeObj)
                         entry.appendChild(document.createTextNode(" "));
 
-                        var delObj = document.createElement("span");
                         delObj.className = 'deleteFile';
                         delObj.innerText = ' [delete]';
                         entry.appendChild(delObj)
 
                         listObj.appendChild(entry)
                     });
-
                 })
                 .catch(function (err) {
                     window.alert(err);
